# Alarm2.0

./: .dockerignore  .env.ci-w1  .env.ci-w2  .env.dev  .env.node1  .env.node2  .env.node3  .env.prod.node1  .env.prod.node2  .env.prod.node3  .env.prod.secrets.example  .env.tier4  .gitattributes  .gitignore  .test_durations  ARCHITECTURE_SMS_VOIX.md  Dockerfile.patroni  IMPROVEMENTS.md  PROMPT_SMS_VOIX.md  PROMPT_SSE_FCM.md  README.md  SITE_SECURITY_NOTES.md  ai-bot-phase1-marker.md  docker-compose.old.yml  docker-compose.vps2.old.yml  docker-compose.vps2.yml  docker-compose.yml  launch.bat  proxy8000.py  pyproject.toml  requirements-dev.txt
.claude/: CLAUDE.md
.github/ai-bot/: README.md  denylist.txt  prompt.md  review-prompt.md
.github/scripts/: mutation_score.py
.github/workflows/: ai-bot-cron.yml  ai-bot-replay.yml  ai-bot-review.yml  ai-bot.yml  ai-merge.yml  cd-build.yml  cd-install-smoke.yml  cd-promote-stable.yml  mutation-testing.yml  pr.yml  slack-test-jetable.yml  tier4-failback.yml
android/: INVARIANTS.md  settings.gradle.kts
android/app/: build.gradle.kts
backend/: requirements.txt
backend/app/: auth.py  clock.py  database.py  email_service.py  escalation.py  events.py  fcm_service.py  leader_election.py  logging_config.py  main.py  models.py  quorum_monitor.py  replica_proxy.py  schemas.py  watchdog.py
docs/: AI_REVIEW_PROCESS.md  AI_STRATEGY.md  CD_DESIGN.md  FAILOVER_4G.md  PROVISIONING_ONSITE.md  ai_backlog.md  architecture_option_A_sqlite_sync.md  architecture_option_B_3vps_patroni.md  test_catalog.md
gateway/: config.py  dry_contact.py  dtmf_decoder.py  generate_alarm_wav.py  health_monitor.py  install.sh  locks.py  modem_detect.py  modem_gateway.py  probe_dry_contact.py  requirements.txt  sms_gateway.py
infra/onsite/: README.md  chrony.conf  install.sh  peers.md  wg0.conf.example  wg1-facade.conf.example
infra/runner/: .env.example  README.md  docker-compose.runner.yml  runner.sh
infra/runner-android/: README.md  enable-hyperv-nested-virt.ps1  install-runner.sh  setup-avds.sh  verify.sh
patroni/: patroni.yml  post_bootstrap.sh
postgres/: primary_init.sh  standby_init.sh
scripts/: 4g-standby.sh  alarm-cd-canary.sh  alarm-cd-orchestrate.sh  alarm-cd-pull.sh  alarm-cd-rollback.sh  ci-cleanup.sh  ci-wait-cluster.sh  disk-check.sh  modem-set-rat.py  modem-watchdog.py  regenerate-test-durations.sh  send-alert-email.py  smoketest-4g.sh  start-prod-node.sh  wg-facade-setup.sh
sre-bot/: .env.example  .gitignore  README.md  agent.py  audit.py  executor.py  main.py  policy.py  requirements.txt  tools.py
tests/: INVARIANTS.md  INVARIANTS_AUDIT.md  audit_results.json  audit_tests.py  audit_v2.json  conftest.py  test_dtmf_decoder.py  test_e2e.py  test_failback.py  test_fcm.py  test_frontend.py  test_improvements.py  test_manual_multi_emulator.py  test_sms_voice.py  test_user_modes.py
tests/integration/: conftest.py  test_admin_only_endpoints.py  test_alarm_original_created_at_inv018.py  test_alarm_visibility_inv007.py  test_alarms_days_clamp.py  test_alarms_reads_inv018b.py  (+21 more)
(+97 files in other folders)
