# Configuration outils (pytest, coverage, ruff). Pas de [project] : ce repo n'est pas
# packageable — backend/, gateway/ et tests/ sont des arbres separes installes via leurs
# propres requirements*.txt.

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
# pythonpath = racine du repo : permet `from backend.app.logic.X import Y` sans installer
# le repo en package. Indispensable sur runners Linux ou cwd != sys.path par defaut.
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
# Markers declares dans tests/conftest.py (failover, unit, integration, e2e, chaos).
# Ne pas dupliquer ici sinon divergence.

[tool.coverage.run]
branch = true
source = ["backend/app"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# Mutation testing (cf docs/AI_STRATEGY.md §5 G1 + workflow
# .github/workflows/mutation-testing.yml).
#
# Cible : logique metier extraite en fonctions pures — les 6 modules sous
# backend/app/logic/. Ne mute PAS le reste du backend : API/routes/services
# sont couverts par les tier 2 (integration) + tier 3 (E2E cluster) qui sont
# trop longs a tourner sous mutmut (~15 min par mutation * milliers = jours).
#
# Runner : pytest tier 1 uniquement (tests/unit/). --assert=plain pour la
# vitesse (pas d'assertion rewriting). -x pour fail-fast sur la premiere
# assertion KO (kill rapide).
#
# Tests_dir : indique a mutmut ou vivent les tests, pour qu'il NE mute PAS
# ces fichiers (mutations dans les tests n'ont aucun sens).
#
# Seuil : score > 80 % emet un warning mais ne fail pas la CI (workflow
# nightly non-bloquant, cf AI_STRATEGY §5 G1).
[tool.mutmut]
paths_to_mutate = "backend/app/logic/"
tests_dir = "tests/unit/"
runner = "python -m pytest -x --assert=plain tests/unit/"
# backup=false : mutmut modifie le code en place pendant une mutation et
# restore ensuite. Pas besoin de backups *.bak polluant le repo.
backup = false
